describe functional programming and Backus' Turing Lecture FP System

--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -19,7 +19,7 @@
   volume    = {}
 }
 
-@book{book:2155605,
+@book{harrison97,
   title     = {Введение в функциональное программирование},
   author    = {Джон Харрисон},
   publisher = {Google},
@@ -248,4 +248,38 @@ numerous short and extended examples and exercises.}
   url = {https://docs.unrealengine.com/4.26/en-US/ProgrammingAndScripting/Blueprints/},
   urldate = {30.05.2021},
   language = {english}
+}
+
+@article{backus77,
+author = {Backus, John},
+year = {1977},
+month = {01},
+pages = {29},
+title = {Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs},
+isbn = {978-1-4503-1049-9},
+doi = {10.1145/1283920.1283933}
+}
+
+
+
+%%% !!! ЗАГЛУШКИ !!! %%%%
+
+@book{sicp,
+  title     = {SICP},
+  author    = {},
+  publisher = {MIT Press},
+  year      = {},
+  series    = {},
+  edition   = {},
+  volume    = {}
+}
+
+@book{algrebrakirkinskii,
+  title     = {Алгебра},
+  author    = {},
+  publisher = {MIT Press},
+  year      = {},
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
