--- a/dissertation.tex
+++ b/dissertation.tex
@@ -100,7 +100,7 @@
 \setlength{\otstuplen}{0pt}
 
 \setsecheadstyle{\basegostsectionfont}
-\include{Dissertation/appendix}        % Приложения
+%\include{Dissertation/appendix}        % Приложения
 
 \setcounter{totalappendix}{\value{chapter}} % Подсчёт количества приложений
 
