--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -9,7 +9,7 @@
   doi     = {10.18293/VLSS2017-010}
 }
 
-@book{book:2507994,
+@book{moderncompilerml,
   title     = {Modern Compiler Implementation in ML},
   author    = {Andrew W. Appel},
   publisher = {Cambridge University Press},
@@ -30,7 +30,7 @@
   volume    = {}
 }
 
-@book{book:913983,
+@book{engineeringacompiler,
   title     = {Engineering a compiler},
   author    = {Keith Cooper; Linda Torczon},
   publisher = {Morgan Kaufmann},
@@ -40,7 +40,7 @@
   volume    = {}
 }
 
-@book{book:2502019,
+@book{elminaction,
   title     = {Elm in Action},
   author    = {Richard Feldman},
   publisher = {Manning Publications},
@@ -50,18 +50,7 @@
   volume    = {}
 }
 
-@book{book:1326024,
-  title     = {Типы в языках программирования},
-  author    = {Бенджамин Пирс},
-  publisher = {Лямбда пресс, Добросвет},
-  isbn      = {},
-  year      = {2010},
-  series    = {},
-  edition   = {},
-  volume    = {}
-}
-
-@book{book:2404124,
+@book{dragonbook,
   title     = {Компиляторы: принципы, технологии и инструментарий},
   author    = {Альфред В. Ахо and Моника С. Лам and Рави Сети and Джеффри Д. Ульман},
   publisher = {ООО “И.Д. Вильямс”},
@@ -72,104 +61,7 @@
   volume    = {}
 }
 
-@book{book:1032747,
-  title     = {Графы в программировании: обработка, визуализация и применение},
-  author    = {Касьянов, Виктор Николаевич;Евстигнеев, Владимир Анатольевич},
-  publisher = {БХВ-Петербург},
-  isbn      = {},
-  year      = {2003},
-  series    = {},
-  edition   = {[Науч. изд.]},
-  volume    = {}
-}
-
-@phdthesis{phdthesis,
-  author = {Kelso, Joel},
-  year   = {2002},
-  month  = {05},
-  pages  = {},
-  title  = {A Visual Programming Environment for Functional Languages}
-}
-
-@article{ITA_1976__10_1_47_0,
-  author    = {Berry, G.},
-  title     = {Bottom-up computation of recursive programs},
-  journal   = {RAIRO - Theoretical Informatics and Applications - Informatique Th\'eorique et Applications},
-  pages     = {47--82},
-  publisher = {Dunod-Gauthier-Villars},
-  address   = {Paris},
-  volume    = {10},
-  number    = {R1},
-  year      = {1976},
-  mrnumber  = {411222},
-  language  = {en},
-  url       = {http://www.numdam.org/item/ITA_1976__10_1_47_0/}
-}
-
-@article{9320477,
-  author  = {Kuhail, Mohammad Amin and Farooq, Shahbano and Hammad, Rawad and Bahja, Mohammed},
-  journal = {IEEE Access},
-  title   = {Characterizing Visual Programming Approaches for End-User Developers: A Systematic Review},
-  year    = {2021},
-  volume  = {9},
-  number  = {},
-  pages   = {14181-14202},
-  doi     = {10.1109/ACCESS.2021.3051043}
-}
-
-@article{article,
-  author  = {Johnston, Wesley and Hanna, J. and Millar, Richard},
-  year    = {2004},
-  month   = {03},
-  pages   = {1-34},
-  title   = {Advances in dataflow programming languages},
-  volume  = {36},
-  journal = {ACM Comput. Surv.},
-  doi     = {10.1145/1013208.1013209}
-}
-
-@article{article,
-  author  = {Shilov, Nikolay},
-  year    = {2018},
-  month   = {10},
-  pages   = {549-560},
-  title   = {Etude on Recursion Elimination},
-  volume  = {25},
-  journal = {Modeling and Analysis of Information Systems},
-  doi     = {10.18255/1818-1015-2018-5-549-560}
-}
-
-@inproceedings{10.1007/11783183_17,
-  author    = {Morris, S. J.
-and Gotel, O. C. Z.},
-  editor    = {Barker-Plummer, Dave
-and Cox, Richard
-and Swoboda, Nik},
-  title     = {Flow Diagrams: Rise and Fall of the First Software Engineering Notation},
-  booktitle = {Diagrammatic Representation and Inference},
-  year      = {2006},
-  publisher = {Springer Berlin Heidelberg},
-  address   = {Berlin, Heidelberg},
-  pages     = {130--144},
-  abstract  = {Drawings of water are the earliest, least abstract forms of flow diagram. Representations of ideal or generalised sequences for manufacturing or actual paths for materials between machines came next. Subsequently documentation of production and information flow become subjects for graphical representation. A similar level of abstraction was necessary for representations of invisible flows such as electricity. After initial use to define control, flow diagrams became a general purpose tool for planning automated computation at all levels of composition. Proliferation of syntax variants and the need for a common language for documentation were the motivations behind standardisation efforts. Public communication of metalevel systems information superseded private comprehension of detailed algorithmic processes as a primary function. Changes to programming language structures and their associated processes caused the initial demise of flow diagrams in software engineering.},
-  isbn      = {978-3-540-35624-0}
-}
-
-@article{DBLP:journals/corr/abs-1906-05170,
-  author        = {Graham Campbell},
-  title         = {Efficient Graph Rewriting},
-  journal       = {CoRR},
-  volume        = {abs/1906.05170},
-  year          = {2019},
-  url           = {http://arxiv.org/abs/1906.05170},
-  archiveprefix = {arXiv},
-  eprint        = {1906.05170},
-  timestamp     = {Sat, 23 Jan 2021 01:12:38 +0100},
-  biburl        = {https://dblp.org/rec/journals/corr/abs-1906-05170.bib},
-  bibsource     = {dblp computer science bibliography, https://dblp.org}
-}
-
-@book{Dybvig:tspl4,
+@book{r6rs,
   author    = {R. Kent Dybvig},
   title     = {The {Scheme} Programming Language},
   publisher = {{MIT} Press},
@@ -189,17 +81,7 @@ numerous short and extended examples and exercises.}
   title  = {Contributions to the theory of tail recursive functions}
 }
 
-@article{article,
-  author  = {Norvig, Peter},
-  year    = {1991},
-  month   = {01},
-  pages   = {},
-  title   = {Techniques for automatic memoization with applications to context-free parsing},
-  volume  = {17},
-  journal = {Computational Linguistics - COLI}
-}
-
-@book{book:1553,
+@book{fp93,
   title     = {Функциональное программирование},
   author    = {Филд А., Харрисон П.},
   publisher = {Мир},
@@ -250,6 +132,9 @@ numerous short and extended examples and exercises.}
   language = {english}
 }
 
+%%% !!! ЗАГЛУШКИ !!! %%%%
+
+
 @article{backus77,
 author = {Backus, John},
 year = {1977},
@@ -260,9 +145,6 @@ isbn = {978-1-4503-1049-9},
 doi = {10.1145/1283920.1283933}
 }
 
-
-
-%%% !!! ЗАГЛУШКИ !!! %%%%
 
 @book{sicp,
   title     = {SICP},
@@ -282,4 +164,113 @@ doi = {10.1145/1283920.1283933}
   series    = {},
   edition   = {},
   volume    = {}
+}
+
+@article{sorengardsestoftreftransp,
+  author = {},
+  year = {},
+  month = {},
+  pages = {},
+  title = {},
+  isbn = {},
+  doi = {}
+}
+
+@online{purefunctions,
+  title={Pure Functions, Laziness, I/O, and Monads},
+  journal={School of Haskell},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://www.schoolofhaskell.com/school/starting-with-haskell/basics-of-haskell/3-pure-functions-laziness-io},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@book{staroletovfunlang,
+  title     = {Старолетов ФунЛанг},
+  author    = {},
+  publisher = {MIT Press},
+  year      = {},
+  series    = {},
+  edition   = {},
+  volume    = {}
+}
+
+@online{partialapplication,
+  title={Partial application},
+  journal={HaskellWiki},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://wiki.haskell.org/Partial_application},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@online{elmarchitecture,
+  title={The Elm Architecture},
+  journal={An Introduction to Elm},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://guide.elm-lang.org/architecture/},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@book{clrs,
+  title     = {Кормен},
+  author    = {},
+  publisher = {MIT Press},
+  year      = {},
+  series    = {},
+  edition   = {},
+  volume    = {}
+}
+
+@online{llvmlang,
+  title={LLVM Language Reference Manual},
+  journal={LLVM 12 Documentation},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://llvm.org/docs/LangRef.html},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@online{v8crankshaft,
+  title={A New Crankshaft for V8},
+  journal={Chromium Blog},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://blog.chromium.org/2010/12/new-crankshaft-for-v8.html},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@online{enso,
+  title={Enso},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://enso.org/language},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@online{adobexd,
+  title={The prototyping tool for teams},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://www.adobe.com/ru/products/xd.html},
+  urldate = {30.05.2021},
+  language = {english}
+}
+
+@online{flo,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://github.com/elliottlawrence/flo},
+  urldate = {30.05.2021},
+  language = {english}
 }
