--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -2,12 +2,14 @@
 
 \section{Проектирование визуального языка программирования}\label{sec:ch2/sec1}
 
-Языку дано название \textbf{Flovver}. Flovver --- аппликативный язык, то есть, вычислительный процесс в нем основывается на вычислении 
+Языку дано название \textbf{Flovver}.
+
+Flovver --- аппликативный язык, то есть, вычислительный процесс в нем основывается на вычислении 
 результата функции от заданного числа аргументов и передачи этого значения в другие функции.
 
 На уровне семантики в языке существует всего-лишь один тип объектов --- функция.
 
-Функция переводит от 1 до N значений заданных входящих типов в одно значение выходящего типа.
+Функция переводит от 0 до N значений заданных входящих типов в одно значение выходящего типа.
 
 В Flovver функции представлены диаграммами вида, представленного на рисунке \ref{fig:functions}.
 
@@ -19,7 +21,7 @@
 \end{figure}
 \FloatBarrier
 
-Здесь блок $f$ --- некоторая функция типа $input 1$ $\rightarrow$ ... $\rightarrow$ $input n$ $\rightarrow$ $output$. 
+Здесь блок $f$ --- некоторая функция типа $input~1$ $\rightarrow$ $\dots$ $\rightarrow$ $input~n$ $\rightarrow$ $output$. 
 Левая часть блока --- входы функции, правая часть блока --- выход функции.
 
 Из правой части выходит дуга, которую можно соединить с входом другой функции (рисунок \ref{fig:functions_composition}).
@@ -64,7 +66,7 @@
 \end{figure}
 \FloatBarrier
 
-Функция $apply$ принимает первым параметром функцию от N аргументов, следующие 2 ... N+1 параметров - параметры, подставляемые в первую функцию (рисунок \ref{fig:apply}).
+Функция $apply$ принимает первым параметром функцию от N аргументов, следующие 2 ... N+1 параметров --- аргументы, подставляемые в первую функцию (рисунок \ref{fig:apply}).
 
 \begin{figure}[ht]
 	\centering
@@ -96,85 +98,135 @@
 \end{figure}
 \FloatBarrier
 
-Можно считать, что функции с $self$ применены к комбинатору неподвижной точки. Комбинатором неподвижной точки (также Y-комбинатором) называют специальную функцию высшего порядка, которая вычисляет неподвижную точку другой функции. 
-Практическая ценность такой функции - возможность использовать рекурсию для анонимных функций без необходимости определения им имени.
+Можно считать, что функции с $self$ применены к комбинатору неподвижной точки. Комбинатором неподвижной точки (также Y-комбинатором) называют специальную функцию высшего порядка, которая вычисляет неподвижную точку другой функции \cite{tapl}. 
+Практическая ценность такой функции --- возможность использовать рекурсию для анонимных функций без необходимости определения им имени.
+
+Пример эквивалентной семантики, реализованной в языке Racket с использованием синтаксических макросов:
+
+\begin{lstlisting}
+;; Комбинатор неподвижной точки
+(define Y
+(lambda (f)
+	((lambda (g) (g g))
+	(lambda (g)       
+		(f  (lambda a (apply (g g) a)))))))
+
+;; Макрос, "эмулирующий" семантику self в Flovver.
+(define-syntax-rule (combine self args f)
+(Y (lambda (self) (lambda args f))))
+
+;; Факториал, написанный с использованием self
+(define fac
+(combine self (x)
+			(if (< x 2)
+				1
+				(* x (self (- x 1))))))
+
+;; Функция Фибоначчи, написанная с использованием self
+(define fib
+(combine self (x)
+			(if (< x 2)
+				x
+				(+ (self (- x 1)) (self (- x 2))))))
+
+(fac 10)
+(fib 5)  
+\end{lstlisting}
 
 \FloatBarrier
 
-%\section{Проектирование общей архитектуры приложения}\label{sec:ch2/sec2}
+\section{Проектирование общей архитектуры приложения}\label{sec:ch2/sec2}
 
 \section{Проектирование вариантов использования приложения}\label{sec:ch2/sec3}
 
 Были написаны возможные сценарии действий пользователей.
 
 \begin{enumerate}
-    \item Тим-лид Иван побывал на стоячей встрече, откуда узнал, что его команда будет разрабатывать приложение “Список задач”. Иван хочет сделать прототип, чтобы объяснить задачу остальным членам команды.
-
+    \item Тим-лид Иван побывал на стоячей встрече, откуда узнал, что его команда будет разрабатывать приложение <<Список задач>>.
+	Иван хочет сделать прототип, чтобы объяснить задачу остальным членам команды.
     Он создает новый проект в приложении Flovver, описывает модель данных: текстовый список задач (нужно где-то хранить задачи). 
-
-    Далее Иван начинает делать макет - добавляет поле для ввода, кнопку и текстовый список.
-
+    Далее Иван начинает делать макет --- добавляет поле для ввода, кнопку и текстовый список.
     Иван сразу настроил макет, чтобы текст для списка брался из списка в модели данных.
-
     Теперь он хочет, чтобы при нажатии на кнопку текст из формы добавлялся в список. Он рисует простую программу на Flovver, которая это и делает.
-
     Иван включает прототип, смотрит, что все работает как надо, собирает программу и идет показывать другим членам команды.
 
-    \item У программиста Олега ответственная задача - ему надо добавить функцию “Удаление элементов” из списка в приложение “Список задач”. Олег открывает проект в Flovver и видит, что ему надо поменять только макет приложения и логику программы. В макете Олег добавляет элементам списка кнопку “Удалить” и идет менять логику программы. Олег добавляет функцию удаления в программу, запускает прототип, проверяет, что все работает и идет на ревью, показывать другим членам команды.
+    \item У программиста Олега ответственная задача --- ему надо добавить функцию <<Удаление элементов>> из списка в приложение <<Список задач>>.
+	Олег открывает проект в Flovver и видит, что ему надо поменять только макет приложения и логику программы.
+	В макете Олег добавляет элементам списка кнопку <<Удалить>> и идет менять логику программы. Олег добавляет функцию удаления в программу,
+	запускает прототип, проверяет, что все работает и идет показывать результат другим членам команды.
 
-    \item Дизайнеру Афанасию поручили подобрать цвет кнопки “Добавить задачу” вместе с заказчиком Михаилом. Афанасий открыл проект в Flovver и по желанию Михаила меняет цвет кнопки. Через пятнадцать минут Михаил определился с цветом кнопки и попросил выделить текст в кнопке курсивом, что Афанасий и сделал. Афанасий показал рабочий прототип Михаилу, Михаил пожал Афанасию руку и пошел выписывать чек в отдел работы с клиентами.
+    \item Дизайнеру Афанасию поручили подобрать цвет кнопки <<Добавить задачу>> вместе с заказчиком Михаилом.
+	Афанасий открыл проект в Flovver и по желанию Михаила меняет цвет кнопки. Через пятнадцать минут Михаил
+	определился с цветом кнопки и попросил выделить текст в кнопке курсивом, что Афанасий и сделал. Афанасий
+	показал рабочий прототип Михаилу, обе стороны остались довольны резульататом.
 
-    \item Аналитик Игорь решил, что в приложении “Список задач” кроме задачи нужно указывать также ориентировочную дату выполнения. Он открыл проект “Список задач” в Flovver, заменил модель данных “Текстовый список задач” на модель “Список кортежей (Дата, Текст задачи)”. Игорь попытался запустить прототип, но Flovver отказался запускать его, сообщив “В программе не соответствуют типы данных - ожидался Текстовый список задач, получили Список кортежей (Дата, Текст задачи)”. К счастью, Игорь не запаниковал, отменил внесенные изменения и позвал программиста Олега. Олег выслушал Игоря, изменил модель и программу. В программе появилась новая функция, а Игорь в итоге ничего не сломал.
+    \item Аналитик Игорь решил, что в приложении <<Список задач>> кроме задачи нужно указывать также ориентировочную дату
+	выполнения. Он открыл проект <<Список задач>> в Flovver, заменил модель данных <<Текстовый список задач>>
+	на модель <<Список кортежей (Дата, Текст задачи)>>. Игорь попытался запустить прототип, но Flovver отказался запускать его,
+	сообщив <<В программе не соответствуют типы данных --- ожидался Текстовый список задач, получили Список кортежей (Дата, Текст задачи)>>.
+	К счастью, Игорь не запаниковал, отменил внесенные изменения и позвал программиста Олега.
+	Олег выслушал Игоря, изменил модель и программу.
 \end{enumerate}
 
 \section{Проектирование интерфейса приложения}\label{sec:ch2/sec4}
 
 \subsection{Проектирование меню и функционально-модульной структуры}\label{sec:ch2/sec4/subsec1}
 
-При открытии программы должен появиться список настроек проекта. В верхней части рабочей области находится навигационное меню с возможностью перехода в модули «Модель», «Обновление», «Представление», «Настройки». Также на верхней панели находятся кнопки «Собрать» и «Запустить», при нажатии на которых происходит сборка проекта, запуск сборки проекта в отдельном окне соответственно.
-
-В модуле «Настройки» содержится форма для управления флагами проекта – «Устранение хвостовой рекурсии»,  «Устранение рекурсии Фибоначчи», «Устранение общей рекурсии», которые представлены элементами управления типа «Флаг» (англ. – check-box). Запись флагов в системное хранилище осуществляется при нажатии на кнопку «Сохранить» в нижней части формы.
-
-В модулях «Модель», «Представление», «Обновление» содержится рабочая область, представляющая пустое пространство, на котором можно размещать элементы предметной области модуля используя механизм «потяни-и-отпусти» (англ. – drag-and-drop). Поверх рабочего окна в модулях находятся две боковые панели – слева – панель с сущностями предметной области модуля, которые можно выбирать наведением и нажатием курсора, добавлять в рабочую область перемещением курсора с зажатой левой кнопкой мыши. Панели можно сворачивать, нажимая на кнопку с соответствующим символом (иконки типа «Шеврон налево», «Шеврон направо»). В правой части содержится панель свойств текущего объекта. При нажатии левой кнопкой мыши на объект рабочей области, для него отображается соответствующий набор свойств – имя объекта, его позиция и т.д. Значения свойств изменяются с использованием соответствующих элементов управления – форм ввода, кнопок. При изменении объекта в рабочей области меняются значения его свойств на панели «Свойства» и наоборот. Компоненты, соответствующие функциональным блокам, представлены в следующем параграфе.
-
-Объекты модуля «Модель» можно назначить моделью проекта. На панели «Свойства» содержится раздел «Роли» с кнопкой «Назначить моделью». При нажатии на нее, выделеный объект помечается как модель. В рабочем пространстве модель визуально представлена объектом с голубым фоном. Объекты типа «Вариант» можно также назначить типом сообщений проекта. При фокусе на варианте в раздел «Роли» добавляется новая кнопка «Назначить типом сообщений». Тип-сообщение выделяется в рабочем пространстве зеленой обводкой объекта.
-
-\subsection{Прототипирование отдельных блоков и компонентов}\label{sec:ch2/sec4/subsec2}
+При открытии программы должен появиться список настроек проекта. В верхней части рабочей области находится навигационное
+меню с возможностью перехода в модули «Модель», «Обновление», «Представление», «Настройки». Также на верхней панели
+находятся кнопки «Собрать» и «Запустить», при нажатии на которых происходит сборка проекта, запуск сборки проекта в отдельном окне соответственно.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.3] {settings_screen}
+	\includegraphics [scale=0.8] {dropdown}
+	\caption{Компонент <<Выпадающее окно>>, появляющийся при нажатии на кнопку <<Проект>> на навигационной панели}
+	\label{fig:dropdown}
+\end{figure}
+\FloatBarrier
+
+В модуле «Настройки» содержится форма для управления флагами проекта: «Устранение хвостовой рекурсии»,
+«Устранение рекурсии Фибоначчи», «Устранение общей рекурсии», которые представлены элементами управления
+типа «Флаг» (англ. –-- check-box). Запись флагов в системное хранилище осуществляется при нажатии
+на кнопку «Сохранить» в нижней части формы.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.4] {settings_screen}
 	\caption{Экран модуля <<Настройки>>, являющийся стартовым}
 	\label{fig:settings_screen}
 \end{figure}
+\FloatBarrier
+
+В модулях «Модель», «Представление», «Обновление» содержится рабочая область, представляющая пустое пространство,
+на котором можно размещать элементы предметной области модуля используя механизм «drag-and-drop».
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.3] {model_screen}
+	\includegraphics [scale=0.4] {model_screen}
 	\caption{Экран модуля <<Модель>>}
 	\label{fig:model_screen}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.3] {view_screen}
+	\includegraphics [scale=0.4] {view_screen}
 	\caption{Экран модуля <<Представление>>}
 	\label{fig:view_screen}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.3] {update_screen}
+	\includegraphics [scale=0.4] {update_screen}
 	\caption{Экран модуля <<Обновление>>}
 	\label{fig:update_screen}
 \end{figure}
 
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.7] {dropdown}
-	\caption{Компонент <<Выпадающее окно>>, появляющийся при нажатии на кнопку <<Проект>> на навигационной панели}
-	\label{fig:dropdown}
-\end{figure}
+\FloatBarrier
+
+Поверх рабочего окна в модулях находятся две боковые панели.
+В левой части находится панель с сущностями предметной области модуля,
+которые можно выбирать наведением и нажатием курсора,
+добавлять в рабочую область перемещением курсора с зажатой левой кнопкой мыши.
 
 \begin{figure}[ht]
 	\centering
@@ -185,10 +237,18 @@
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.3] {view_work}
-	\caption{Рабочая область модуля <<Представление>>}
-	\label{fig:view_work}
+	\includegraphics [scale=0.7] {model_types}
+	\caption{Левая боковая панель <<Типы>> модуля <<Модель>>}
+	\label{fig:model_types}
 \end{figure}
+
+\FloatBarrier
+
+В правой части содержится панель свойств текущего объекта.
+При нажатии левой кнопкой мыши на объект рабочей области,
+для него отображается соответствующий набор свойств –-- имя объекта, его позиция и т.д.
+Значения свойств изменяются с использованием соответствующих элементов управления --– форм ввода, кнопок.
+При изменении объекта в рабочей области меняются значения его свойств на панели «Свойства» и наоборот.
 
 \begin{figure}[ht]
 	\centering
@@ -199,10 +259,20 @@
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.7] {model_types}
-	\caption{Левая боковая панель <<Типы>> модуля <<Модель>>}
-	\label{fig:model_types}
+	\includegraphics [scale=0.5] {model_properties}
+	\caption{Правая боковая панель <<Свойства>> модуля <<Модель>>, выбран компонент <<Вариант>>}
+	\label{fig:model_properties}
 \end{figure}
+
+\FloatBarrier
+
+Панели можно сворачивать, нажимая на кнопку с соответствующим символом (иконки <<Стрелка влево>>, <<Стрелка вправо>>).
+
+Объекты модуля «Модель» можно назначить моделью проекта. На панели «Свойства» содержится
+раздел «Роли» с кнопкой «Назначить моделью». При нажатии на нее, выделенный объект помечается как модель.
+В рабочем пространстве модель визуально представлена объектом с голубым фоном. Объекты типа «Вариант»
+можно также назначить типом сообщений проекта. При фокусе на варианте в раздел «Роли» добавляется новая
+кнопка «Назначить типом сообщений». Тип-сообщение выделяется в рабочем пространстве зеленой обводкой объекта.
 
 \begin{figure}[ht]
 	\centering
@@ -239,12 +309,14 @@
 	\label{fig:message_model_variant}
 \end{figure}
 
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.5] {model_properties}
-	\caption{Правая боковая панель <<Свойства>> модуля <<Модель>>, выбран компонент <<Вариант>>}
-	\label{fig:model_properties}
-\end{figure}
+Объекты модуля «Обновление» можно соединять между собой связями. При нажатии
+на выход одного объекта, появится черная линия, которую можно соединить с входом
+другого объекта. При отжатии левой кнопки мыши вне входа функции, линия исчезнет
+и связь не будет создана. Входы объекта <<Определение функции>> можно соединить
+с входами лежащих в нем компонентов, также можно выходы объектов, лежащих внутри
+компонента <<Определение функции>>, соединить с выходом этого объекта.
+При соединении выхода какого-либо объекта с входом объекта, уже имеющего связь
+по этому входу, прежняя связь удаляется, формируется последняя вызванная связь.
 
 \begin{figure}[ht]
 	\centering
@@ -284,31 +356,15 @@
 \begin{figure}[ht]
 	\centering
 	\includegraphics [scale=0.5] {update_def_band}
-	\caption{Компонент <<Определение функции>> в состоянии <<Расстягивание>>}
+	\caption{Компонент <<Определение функции>> в состоянии <<Растягивание>>}
 	\label{fig:update_def_band}
 \end{figure}
 
 \FloatBarrier
 
-\subsection{Глоссарий}\label{sec:ch2/sec4/subsec3}
+\newpage
 
-\textbf{Приложение} --– комбинация компьютерных инструкций и данных, позволяющая аппаратному обеспечению вычислительной системы выполнять вычисления или функции управления.
-
-\textbf{Интегрированная среда разработки (ИСР)} –-- это программное приложение, которое предоставляет программистам комплексные возможности для разработки программного обеспечения.
-
-\textbf{Виджет} –-- примитив графического интерфейса пользователя, имеющий стандартный внешний вид и выполняющий стандартные действия.
-
-\textbf{Вкладка} –-- элемент графического интерфейса пользователя, который даёт возможность переключения в одном окне приложения между несколькими открытыми документами или предопределёнными наборами элементов интерфейса, когда их доступно несколько, а на выделенном для них пространстве окна можно показывать только один из них.
-
-\textbf{Панель} --– определенное расположение информации, сгруппированной вместе для представления пользователям в окне или всплывающем окне.
-
-\textbf{Кнопка} --– элемент интерфейса компьютерных программ, является метафорой кнопки в технике и, соответственно, изображается схожей с ней и выполняет аналогичные функции. При нажатии на неё происходит программно связанное с этим нажатием действие либо событие.
-
-\textbf{Метод взаимодействия <<Потяни-и-отпусти>>} (англ. --– drag-and-drop) --- способ оперирования элементами интерфейса в интерфейсах пользователя (как графическим, так и текстовым, где элементы GUI реализованы при помощи псевдографики) при помощи манипулятора «мышь» или сенсорного экрана.
-
-\FloatBarrier
-
-\subsection{Полная функционально-модульная схема приложения}\label{sec:ch2/sec4/subsec4}
+\subsection{Полная функционально-модульная схема приложения}\label{sec:ch2/sec4/subsec3}
 
 \begin{figure}[ht]
 	\centering
