--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -274,3 +274,14 @@ doi = {10.1145/1283920.1283933}
   urldate = {30.05.2021},
   language = {english}
 }
+
+@book{tapl,
+  title     = {Типы в языках программирования},
+  author    = {Бенджамин Пирс},
+  publisher = {Лямбда пресс, Добросвет},
+  isbn      = {},
+  year      = {2010},
+  series    = {},
+  edition   = {},
+  volume    = {}
+}
